--- a/src/NLog.config
+++ b/src/NLog.config
@@ -13,7 +13,7 @@
   <!-- the targets to write to -->
   <targets>
     <!-- write logs to file  -->
-    <target xsi:type="File" name="allfile" fileName="logs\nlog-all-${shortdate}.log"
+    <target xsi:type="Console" name="allfile"
             layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 
     <!-- another file log, only own logs. Uses some ASP.NET core renderers -->
